@@ -38,12 +38,12 @@
    area or from any of the <a href="../mirrors.html">GCC mirror sites</a>.
 </p>
 
-<p>The CVS source repository is part of the GCC repository.  Instructions
-   for anonymous CVS access are the same as
-   <a href="../cvs.html">those for the rest of the compiler</a>.  Checking
-   out the <code>gcc</code> module will also get the library sources; to
-   retrieve only the library, check out the <code>libstdc++-v3</code> module
-   instead.
+<p>The SVN source repository is part of the GCC repository.  Instructions
+   for anonymous SVN access are the same as
+   <a href="../svn.html">those for the rest of the compiler</a>.  Checking
+   out the GCC <code>trunk</code> or one of the branches will also get the
+   library sources; to retrieve only the library, check out
+   <code>trunk/libstdc++-v3</code> instead.
 </p>
 
 </body>
