@@ -1,3 +1,7 @@
+2007-09-29  Jonathan Wakely  <jwakely.gcc@gmail.com>
+
+	* index.html: Update CVS notes to refer to Subversion.
+
 2006-12-11  Ian Lance Taylor  <iant@google.com>
 
 	* index.html: Remove news entries.
